modified scroll points for each location, solved the flickering in Uppsala but can't get the transition from norrköping to cuerna to work...

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1157,7 +1157,7 @@ body {
 
 #main {
   position: relative;
-  height: 500vh;
+  height: 550vh;
   z-index: 500; }
   #main .scroll-target {
     background: transparent;
