--- a/styles/sass/_template.scss
+++ b/styles/sass/_template.scss
@@ -358,7 +358,7 @@ body {
 
 #main {
 	position: relative;
-	height: 500vh;
+	height: 550vh;
 	z-index: 500;
 	
 	.scroll-target {
